# caida_collector_pkg

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
caida_collector_pkg/: __main__.py
caida_collector_pkg/caida_collector/: caida_collector.py
caida_collector_pkg/caida_collector/tests/: conftest.py  test_data_extraction_funcs.py  test_html_funcs.py
caida_collector_pkg/graph/: base_as.py  bgp_dag.py  graph_building_funcs.py
lib_caida_collector/: __init__.py  __main__.py  as_class.py  base_as.py  bgp_dag.py  caida_collector.py  customer_provider_link.py  link.py  peer_link.py  policies.py  tables.py
lib_caida_collector/caida_collector/: __init__.py  caida_collector.py  data_extraction_funcs.py  file_reading_funcs.py  html_funcs.py
lib_caida_collector/caida_collector/tests/: conftest.py  test_caida_collector.py  test_data_extraction_funcs.py  test_html_funcs.py  test_read_file_funcs.py
lib_caida_collector/caida_collector/tests/examples/: serial_2.html
lib_caida_collector/graph/: __init__.py  base_as.py  bgp_dag.py  customer_cone_funcs.py  graph_building_funcs.py  propagation_rank_funcs.py
lib_caida_collector/links/: __init__.py  link.py  peer_link.py
lib_caida_collector/tests/: test_tables.py
scripts/rov_ases/: .combined.csv.swp
