[build-system]
requires = ["setuptools>=51.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = ["test*.py"]
python_classes = ["Test*"]
python_functions = ["test*"]
addopts = "--cov=lib_caida_collector"
markers = [
    "slow",  # All slow tests
    "read_file_funcs",  # Reading caida files
    "data_extraction_funcs",  # Related to reading data from file
    "caida_collector_base_funcs"  # other funcs in caida collector
]

[tool.mypy]
mypy_path = "lib_caida_collector"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
