# setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = lib_caida_collector
author = Justin Furuness, Matt Jaccino, Tony Zheng
author_email = jfuruness@gmail.com
description = Useful functions used across modules
version = 0.0.62
url = https://github.com/jfuruness/lib_caida_collector.git

keywords = 
    BGP
    Caida
    Peers
    Providers
    Relationships
    AS-Serial
    Customers

classifiers = 
    Programming Language :: Python :: 3
    Environment :: Console
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

license = BSD
license_files = LICENSE

long_description = README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
# Mypy won't work if this is True
zip_safe = False
# Include extras in Manfest.in
include_package_data = True
install_requires =
    beautifulsoup4==4.10.0
    PyYAML==6.0
    requests==2.26.0
    yamlable==1.0.4

description-file = README.md

[options.entry_points]
console_scripts =
    lib_caida_collector = lib_caida_collector.__main__:main

# https://stackoverflow.com/a/30539963/8903959
[options.extras_require]
test =
    beautifulsoup4==4.10.0
    pytest==6.2.5
    PyYAML==6.0
    requests==2.26.0
    yamlable==1.0.4

    pytest-cov==3.0.0
    types-requests==2.26.1
    mypy==0.910
    flake8==4.0.1
    tox==3.24.4

[options.package_data]
lib_caida_collector = py.typed

[flake8]
max-line-length = 79

[coverage:run]
branch = True
omit = 
    *tests*
    *__init__*

[coverage:report]

show_missing = True

exclude_lines =
    # Excludes lines overrides pragma: no cover, so add it back
    pragma: no cover

    # Code below this is not meant to be tested
    raise NotImplementedError

    # Code that isn't meant to be run
    if __name__ == .__main__.:
